update and deploy test

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "depo-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Fatah-BNB.github.io/depo-test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+	"deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^1.4.0",
+    "gh-pages": "^5.0.0"
   }
 }
